<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/weather_background"
    tools:context="com.skyview.wtw.WeatherController">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_loaction"
        android:id="@+id/locationTV"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"/>



    <TextView
        android:id="@+id/tempTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="90sp"
        android:textColor="@color/white"
        android:layout_below="@+id/changeCityButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temp" />

    <ImageButton
        android:id="@+id/changeCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/change_city_description"


        android:src="@drawable/change_city_symbol" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/weatherSymbolTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_description"
            android:src="@drawable/dunno" />
    </FrameLayout>
</RelativeLayout>








