<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_horizontal_margin"
    android:background="@drawable/city_background">

    <TextView
        android:id="@+id/getWeatherTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/backButton"
        android:text="@string/get_weather" />

   <EditText
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:id="@+id/queryT"
       android:textColor="@color/black"
       android:inputType="textAutoCorrect"
       android:hint="@string/default_query"
       android:outlineProvider="paddedBounds"
       android:imeOptions="actionGo"
       android:gravity="center_vertical|center_horizontal">



   </EditText>


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/back_button_description"
        app:srcCompat="@drawable/left" />

</RelativeLayout>